[tool.poetry]
name = "lefttoright"
version = "0.1.0"
description = ""
authors = ["Andrew Silva <asilva@law.harvard.edu", "Ben Steinberg <bsteinberg@law.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
