[tool.poetry]
name = "lefttoright"
version = "0.1.0"
description = ""
authors = ["Andrew Silva <asilva@law.harvard.edu", "Ben Steinberg <bsteinberg@law.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
requests = "^2.25.1"
gunicorn = "^20.1.0"
num2words = "^0.5.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pytest = "^6.2.4"
pytest-flake8 = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '--flake8 --doctest-modules'
filterwarnings = [
    'ignore:invalid escape sequence:DeprecationWarning',
]

[flake8]
doctests = true