[tool.poetry]
name = "lefttoright"
version = "0.1.9"
description = ""
authors = ["Andrew Silva <asilva@law.harvard.edu", "Ben Steinberg <bsteinberg@law.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "*"
requests = "*"
gunicorn = "*"
num2words = "*"
markupsafe = "*"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pytest = "^6.2.4"
pytest-flake8 = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '--flake8 --doctest-modules'
filterwarnings = [
    'ignore:invalid escape sequence:DeprecationWarning',
]

[flake8]
doctests = true